Create Entities - Create DbContext - Create DbInitializer - Create First Migration

--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SchoolSystem.Data\SchoolSystem.Data.csproj" />
+    <ProjectReference Include="..\SchoolSystem.Service\SchoolSystem.Service.csproj" />
+  </ItemGroup>
+
 </Project>
