--- a/SchoolSystem.APIs/appsettings.json
+++ b/SchoolSystem.APIs/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+  "SchooldbContext": "Server = .; Database = SchoolSystem; Trusted_Connection = True;TrustServerCertificate = True"
+  }
 }
