Add Student Query and Handler

--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -7,8 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SchoolSystem.Data\SchoolSystem.Data.csproj" />
     <ProjectReference Include="..\SchoolSystem.Service\SchoolSystem.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Students\Commands\Handlers\" />
+    <Folder Include="Features\Students\Commands\Models\" />
+    <Folder Include="Features\Students\Commands\Validators\" />
   </ItemGroup>
 
 </Project>
