--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -8,18 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SchoolSystem.Data\SchoolSystem.Data.csproj" />
     <ProjectReference Include="..\SchoolSystem.Service\SchoolSystem.Service.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Features\Students\Commands\Handlers\" />
-    <Folder Include="Features\Students\Commands\Models\" />
-    <Folder Include="Features\Students\Commands\Validators\" />
   </ItemGroup>
 
 </Project>
