--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\SchoolSystem.Service\SchoolSystem.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Department\" />
+  </ItemGroup>
+
 </Project>
