Create GetDepartmentList service and endpoint

--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Department\" />
+    <Folder Include="Features\Departments\Commands\" />
   </ItemGroup>
 
 </Project>
