--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Accounts\Commands\Validators\" />
+    <Folder Include="Features\Accounts\Results\" />
+    <Folder Include="Features\Accounts\Queries\" />
     <Folder Include="Features\Departments\Commands\" />
   </ItemGroup>
 
