Enhance authentication and API documentation
- Updated `StudentController` to enforce authorization for accessing student lists.
- Added Swagger configuration in `IdentityExtension` for improved API documentation and JWT security definitions.
- Added new localization strings for authentication-related feedback in `SharedResources`.
- Created `AuthenticationController` and `AuthenticationCommandHandler` for handling sign-in requests.
- Introduced `SignInCommand` class for encapsulating sign-in data.
- Created `JwtSettings` class for centralized JWT configuration management.
- Enhanced `Status` class with new codes for clearer authentication result communication.

--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Authentication\Commands\Validators\" />
+    <Folder Include="Features\Authentication\Results\" />
+    <Folder Include="Features\Authentication\Queries\" />
     <Folder Include="Features\Departments\Commands\" />
   </ItemGroup>
 
