--- a/SchoolSystem.Infrastructure/SchoolSystem.Infrastructure.csproj
+++ b/SchoolSystem.Infrastructure/SchoolSystem.Infrastructure.csproj
@@ -12,6 +12,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
