Add role management features and authorization updates
- Updated `DashboardController.cs` to include admin role authorization and new endpoints for role management (Add, Edit, Delete, List).
- Modified `UserCommandHandler.cs` and `AddUserCommand.cs` to include role parameters for user creation.
- Updated project files (`SchoolSystem.APIs.csproj`, `SchoolSystem.Core.csproj`) to include necessary SDKs and new folder structures.
- Added role-related messages to resource files and updated `SharedResourcesKeys.cs`.
- Enhanced routing in `Router.cs` for role management.
- Modified `IAuthService.cs` to include role parameters and registered `IAuthorizationService` in `DependencyInjection.cs`.
- Implemented role assignment logic in `AuthService.cs`.
- Created new classes and interfaces for handling authorization commands and queries related to role management.

--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -24,6 +24,7 @@
     <Folder Include="Features\Authentication\Commands\Validators\" />
     <Folder Include="Features\Authentication\Results\" />
     <Folder Include="Features\Authentication\Queries\" />
+    <Folder Include="Features\Authorization\Results\" />
     <Folder Include="Features\Departments\Commands\" />
   </ItemGroup>
 
