Add email verification and password reset features
- Updated `AccountController.cs` with new endpoints for sending and verifying email codes, resetting passwords, and confirming email addresses.
- Added `EmailSettings` section in `appsettings.json` for email configuration.
- Enhanced localization files with new strings for email-related messages.
- Modified `SharedResourcesKeys.cs` to include keys for email actions.
- Updated `Router.cs` to define routes for email actions.
- Added properties for email confirmation in `ApplicationUser.cs`.
- Updated `SchoolDbContextModelSnapshot.cs` to reflect new user properties.
- Configured `EmailSettings` and registered `IEmailService` in `DependencyInjection.cs`.
- Included `MailKit` package in `SchoolSystem.Service.csproj` for email functionality.
- Created `EmailsCommandHandler.cs` to handle email-related commands.
- Added command classes for email confirmation and password reset.
- Created `EmailSettings.cs` for email configuration structure.
- Introduced `UserClaimsModel.cs` for user claims representation.
- Created migration files to add email confirmation fields to `AspNetUsers`.
- Developed email handling classes (`EmailDto`, `IEmailService`, `EmailService`) for sending emails.

--- a/SchoolSystem.APIs/appsettings.json
+++ b/SchoolSystem.APIs/appsettings.json
@@ -15,5 +15,13 @@
     "Audience": "SchoolSystemUsers",
     "Issuer": "SchoolSystemIdentity",
     "DurationInDays": 3
+  },
+  "EmailSettings": {
+    "Email": "ma6031774@gmail.com",
+    "DisplayName": "School_System",
+    "Password": "xivrzymzaltymmuh",
+    "Host": "smtp.gmail.com",
+    "Port": "587"
   }
+
 }
