--- a/SchoolSystem.Core/SchoolSystem.Core.csproj
+++ b/SchoolSystem.Core/SchoolSystem.Core.csproj
@@ -1,14 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<AssemblyName>SchoolSystem.Core</AssemblyName>
+		<RootNamespace>SchoolSystem.Core</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.14" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.3" />
-  </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.14" />
+		<PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.3" />
+	</ItemGroup>
 
 </Project>
